<resources>
    // MainActivity strings
    <string name="app_name">Chord Progression Creator</string>
    <string name="welcome">Add Chords Here!</string>
    <string name="play_button">Play</string>
    <string name="pause_button">Pause</string>
    <string name="save_button">Save</string>
    <string name="load_button">Load</string>
    <string name="add_chord">+</string>
    <string name="subtract_chord">-</string>
    <string name="list_users_button">View User List</string>
    <string name="delete_account_button">Delete Account</string>
    <string name="update_account_button">Update Account</string>

    // EditChordFragment strings
    <string name="select_chord">Select Chord:</string>
    <string name="chord_type">Chord Type:</string>
    <string name="c_note">C</string>
    <string name="csh_note">C#</string>
    <string name="db_note">Db</string>
    <string name="d_note">D</string>
    <string name="dsh_note">D#</string>
    <string name="eb_note">Eb</string>
    <string name="e_note">E</string>
    <string name="f_note">F</string>
    <string name="fsh_note">F#</string>
    <string name="gb_note">Gb</string>
    <string name="g_note">G</string>
    <string name="gsh_note">G#</string>
    <string name="ab_note">Ab</string>
    <string name="a_note">A</string>
    <string name="ash_note">A#</string>
    <string name="bb_note">Bb</string>
    <string name="b_note">B</string>
    <string name="major_type">M</string>
    <string name="minor_type">m</string>
    <string name="seven_type">7</string>
    <string name="major7_type">M7</string>
    <string name="minor7_type">m7</string>
    <string name="dim_type">dim</string>

    // LoginActivity strings
    <string name="login_app_name">Login Register</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Match</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">SQLite Database Overview</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
