<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditChordFragment"
    android:orientation="vertical">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_chord"
        android:textSize="30sp" />

    <Button
        android:id="@+id/c_note"
        android:layout_width="49dp"
        android:layout_height="wrap_content"
        android:text="@string/c_note" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chord_type"
        android:textSize="30sp" />

    <Button
        android:id="@+id/major_type"
        android:layout_width="49dp"
        android:layout_height="wrap_content"
        android:text="@string/major_type" />

</LinearLayout>